# calibr

./: .gitignore  404.html  CITATION.cff  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: docs.yml  linting.yml  tests.yml
LICENSE/: index.html
api/: index.html
docs/: api.md
search/: search_index.json
src/calibr/: __init__.py  acquisition_functions.py  calibration.py  emulation.py  optimization.py
tests/: conftest.py  test_optimization.py
